default/objects/Custom_log_archivation_settings__c/Custom_log_archivation_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>settings for object Custom_log__c archivation</description>
    <label>Custom log archivation settings</label>
</CustomObject>