default/objects/Custom_log_archivation_settings__c/fields/Days_logs_to_archive__c.field-meta.xml
<CustomField>
    <fullName>Days_logs_to_archive__c</fullName>
    <description>Number of days to pass logs to be archived</description>
    <inlineHelpText>Number of days to pass logs to be archived</inlineHelpText>
    <label>Days logs to archive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>