default/objects/Custom_log_archivation_settings__c/fields/Notification_recipients__c.field-meta.xml
<CustomField>
    <fullName>Notification_recipients__c</fullName>
    <description>Emails of the users who will be notified once operation is complete. Must be separated by ;</description>
    <inlineHelpText>Emails of the users who will be notified once operation is complete. Must be separated by ;</inlineHelpText>
    <label>Notification recipients</label>
    <type>TextArea</type>
</CustomField>