default/objects/Custom_log_archivation_settings__c/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>List of sources. Must be separated by ;</description>
    <inlineHelpText>List of sources. Must be separated by ;</inlineHelpText>
    <label>Sources</label>
    <type>TextArea</type>
</CustomField>